--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,8 @@ body {
 .btn {
   margin: 25px;
   display: inline-block;
-  height: 200px;
-  width: 200px;
+  height: 25vh;
+  width: 12vw;
   border: 10px solid black;
   border-radius: 20%;
 }
